--- a/.github/workflows/main_fnc-lab-aws-sso.yml
+++ b/.github/workflows/main_fnc-lab-aws-sso.yml
@@ -35,12 +35,16 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+           pip install -r requirements.txt
+           popd
 
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          zip release.zip './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
